🐛 fix: min width of cards let to layout issues
FF mobile is natively zoomed in that made the cards misalign
Removed it completely for now

--- a/src/pages/service/style.scss
+++ b/src/pages/service/style.scss
@@ -4,7 +4,3 @@
   font-size: 4rem;
   font-weight: 900;
 }
-
-.course-tile {
-  min-width: 50ch;
-}
